@@ -281,6 +281,12 @@ Working version
 - #11338: Turn some partial application warnings into hints.
   (Leo White, review by Stephen Dolan)
 
+- #10931: Improve warning 14 (illegal backslash) with a better explanation
+  of the causes and how to fix it.
+  (David Allsopp, Florian Angeletti, Lucas De Angelis, Gabriel Scherer,
+  review by Nicolás Ojeda Bär, Florian Angeletti, David Allsopp and
+  Gabriel Scherer)
+
 - #10911: Improve the location reported by parenthesized assert expressions
   (Fabian Hemmer, review by Gabriel Scherer)
 
